# web-scraping

./: README.md  one_paragraph.html  pyproject.toml  scraper.py
tests/: test_scraper.py
